# webserver

./: .black  .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  PRE-COMMIT.md  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  makefile  manage.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  dev-workflow.yml  release.yml
app/: admin.py  apps.py  models.py  signals.py  storage.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_role_user_roles.py  0003_processstatus_processtype_process_equipment_and_more.py  0004_clientprofile_equipment_estado_actual_equipment_sede_and_more.py  0005_alter_equipment_options_alter_report_options_and_more.py  0006_alter_process_estado_alter_process_process_type_and_more.py  0006_create_role_groups.py  0007_populate_permissions_for_roles.py  0008_alter_process_estado_alter_process_process_type_and_more.py  0009_anotacion.py  0010_report_equipment_processstatuslog.py  0011_alter_process_estado_and_more.py  0012_populate_checklist_definitions.py  0015_alter_checklistitemdefinition_options.py  (+25 more)
app_server/: asgi.py  settings.py  urls.py  wsgi.py
documentation/: CI_CD_ECR_Workflow.md  README ANOTATION MODEL AND EQUIPMENT HANDLER FUNCTIONS.md  README POPULATE-DB.md  README_CHECKLIST_STATUS_TRACKING.md  README_PERMISSIONS.md  README_PROCESS_MODEL_CHECKLIST_HANDLERS.md
templates/: base.html  dashboard_cliente.html  dashboard_gerente.html  dashboard_interno.html  login.html  main.html  welcome.html
(+61 files in other folders)
